--- a/k8s-manifest/deployment.yaml
+++ b/k8s-manifest/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: python
-          image: gcr.io/searce-playground-v1/cicd-python:${GIT_COMMIT}
+          image: gcr.io/searce-playground-v1/cicd-python:b4c05a4f32007d04a05c64114a1863526c0d0128
           ImagePullPolicy: Always
           ports:
             - name: http
